# thinkpalm-agentai-agentops-teamalpha

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.bat
docs/: architecture-writeup.md  generate_architecture_pdf.py
src/fleet_health/: __init__.py  __main__.py  auth.py  config.py  main.py
src/fleet_health/agents/: __init__.py  graph.py  nodes.py  state.py
src/fleet_health/memory/: __init__.py  sqlite_store.py
src/fleet_health/schemas/: __init__.py  models.py
src/fleet_health/static/: index.html  live.html  login.html
src/fleet_health/static/css/: dashboard.css  live.css  login.css
src/fleet_health/static/js/: dashboard.js  live.js  login.js
src/fleet_health/tools/: __init__.py  anomaly_detector.py  memory_tools.py  parsers.py
tests/: conftest.py  test_anomaly_detector.py  test_api.py  test_auth.py  test_parsers.py  test_pipeline.py
